src/OpenCvSharp.Native/include/open_cv_sharp/imgproc.h

OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_distance_transform(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int distance_type,
    int mask_size,
    int dst_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_distance_transform_with_labels(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    jyppx_ocv_mat* labels,
    int distance_type,
    int mask_size,
    int label_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_flood_fill(
    jyppx_ocv_mat* image,
    int seed_x,
    int seed_y,
    double new_value_v0,
    double new_value_v1,
    double new_value_v2,
    double new_value_v3,
    int* rect_x,
    int* rect_y,
    int* rect_width,
    int* rect_height,
    double lo_diff_v0,
    double lo_diff_v1,
    double lo_diff_v2,
    double lo_diff_v3,
    double up_diff_v0,
    double up_diff_v1,
    double up_diff_v2,
    double up_diff_v3,
    int flags,
    int* filled_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_flood_fill_mask(
    jyppx_ocv_mat* image,
    jyppx_ocv_mat* mask,
    int seed_x,
    int seed_y,
    double new_value_v0,
    double new_value_v1,
    double new_value_v2,
    double new_value_v3,
    int* rect_x,
    int* rect_y,
    int* rect_width,
    int* rect_height,
    double lo_diff_v0,
    double lo_diff_v1,
    double lo_diff_v2,
    double lo_diff_v3,
    double up_diff_v0,
    double up_diff_v1,
    double up_diff_v2,
    double up_diff_v3,
    int flags,
    int* filled_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_connected_components(
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* labels,
    int connectivity,
    int ltype,
    int* label_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_connected_components_with_algorithm(
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* labels,
    int connectivity,
    int ltype,
    int ccltype,
    int* label_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_connected_components_with_stats(
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* labels,
    jyppx_ocv_mat* stats,
    jyppx_ocv_mat* centroids,
    int connectivity,
    int ltype,
    int* label_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_connected_components_with_stats_with_algorithm(
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* labels,
    jyppx_ocv_mat* stats,
    jyppx_ocv_mat* centroids,
    int connectivity,
    int ltype,
    int ccltype,
    int* label_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_equalize_hist(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_corner_harris(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int block_size,
    int ksize,
    double k,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_corner_min_eigen_val(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int block_size,
    int ksize,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_corner_eigen_vals_and_vecs(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int block_size,
    int ksize,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_pre_corner_detect(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ksize,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_gaussian_blur(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int width,
    int height,
    double sigma_x,
    double sigma_y,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_blur(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int width,
    int height,
    int anchor_x,
    int anchor_y,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_box_filter(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ddepth,
    int width,
    int height,
    int anchor_x,
    int anchor_y,
    int normalize,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_sqr_box_filter(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ddepth,
    int width,
    int height,
    int anchor_x,
    int anchor_y,
    int normalize,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_median_blur(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ksize);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_bilateral_filter(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int d,
    double sigma_color,
    double sigma_space,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_filter2d(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ddepth,
    const jyppx_ocv_mat* kernel,
    int anchor_x,
    int anchor_y,
    double delta,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_sep_filter2d(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ddepth,
    const jyppx_ocv_mat* kernel_x,
    const jyppx_ocv_mat* kernel_y,
    int anchor_x,
    int anchor_y,
    double delta,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_sobel(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ddepth,
    int dx,
    int dy,
    int ksize,
    double scale,
    double delta,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_scharr(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ddepth,
    int dx,
    int dy,
    double scale,
    double delta,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_laplacian(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int ddepth,
    int ksize,
    double scale,
    double delta,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_canny(
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* edges,
    double threshold1,
    double threshold2,
    int aperture_size,
    int l2_gradient);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_canny_derivatives(
    const jyppx_ocv_mat* dx,
    const jyppx_ocv_mat* dy,
    jyppx_ocv_mat* edges,
    double threshold1,
    double threshold2,
    int l2_gradient);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_gaussian_kernel(
    int ksize,
    double sigma,
    int ktype,
    jyppx_ocv_mat** out_kernel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_deriv_kernels(
    jyppx_ocv_mat* kx,
    jyppx_ocv_mat* ky,
    int dx,
    int dy,
    int ksize,
    int normalize,
    int ktype);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_gabor_kernel(
    int width,
    int height,
    double sigma,
    double theta,
    double lambd,
    double gamma,
    double psi,
    int ktype,
    jyppx_ocv_mat** out_kernel);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_pyr_down(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int width,
    int height,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_pyr_up(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int width,
    int height,
    int border_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_warp_affine(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* transform,
    int width,
    int height,
    int flags,
    int border_mode,
    double border_value_v0,
    double border_value_v1,
    double border_value_v2,
    double border_value_v3);