src/OpenCvSharp/Internal/Interop/NativeMethods.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_distance_transform")]
        internal static extern int ImgProcDistanceTransform(
            IntPtr src,
            IntPtr dst,
            int distanceType,
            int maskSize,
            int dstType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_distance_transform_with_labels")]
        internal static extern int ImgProcDistanceTransformWithLabels(
            IntPtr src,
            IntPtr dst,
            IntPtr labels,
            int distanceType,
            int maskSize,
            int labelType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_flood_fill")]
        internal static extern int ImgProcFloodFill(
            IntPtr image,
            int seedX,
            int seedY,
            double newValueV0,
            double newValueV1,
            double newValueV2,
            double newValueV3,
            out int rectX,
            out int rectY,
            out int rectWidth,
            out int rectHeight,
            double loDiffV0,
            double loDiffV1,
            double loDiffV2,
            double loDiffV3,
            double upDiffV0,
            double upDiffV1,
            double upDiffV2,
            double upDiffV3,
            int flags,
            out int filledCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_flood_fill_mask")]
        internal static extern int ImgProcFloodFillMask(
            IntPtr image,
            IntPtr mask,
            int seedX,
            int seedY,
            double newValueV0,
            double newValueV1,
            double newValueV2,
            double newValueV3,
            out int rectX,
            out int rectY,
            out int rectWidth,
            out int rectHeight,
            double loDiffV0,
            double loDiffV1,
            double loDiffV2,
            double loDiffV3,
            double upDiffV0,
            double upDiffV1,
            double upDiffV2,
            double upDiffV3,
            int flags,
            out int filledCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_connected_components")]
        internal static extern int ImgProcConnectedComponents(
            IntPtr image,
            IntPtr labels,
            int connectivity,
            int ltype,
            out int labelCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_connected_components_with_algorithm")]
        internal static extern int ImgProcConnectedComponentsWithAlgorithm(
            IntPtr image,
            IntPtr labels,
            int connectivity,
            int ltype,
            int ccltype,
            out int labelCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_connected_components_with_stats")]
        internal static extern int ImgProcConnectedComponentsWithStats(
            IntPtr image,
            IntPtr labels,
            IntPtr stats,
            IntPtr centroids,
            int connectivity,
            int ltype,
            out int labelCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_connected_components_with_stats_with_algorithm")]
        internal static extern int ImgProcConnectedComponentsWithStatsWithAlgorithm(
            IntPtr image,
            IntPtr labels,
            IntPtr stats,
            IntPtr centroids,
            int connectivity,
            int ltype,
            int ccltype,
            out int labelCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_equalize_hist")]
        internal static extern int ImgProcEqualizeHist(
            IntPtr src,
            IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_corner_harris")]
        internal static extern int ImgProcCornerHarris(
            IntPtr src,
            IntPtr dst,
            int blockSize,
            int ksize,
            double k,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_corner_min_eigen_val")]
        internal static extern int ImgProcCornerMinEigenVal(
            IntPtr src,
            IntPtr dst,
            int blockSize,
            int ksize,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_corner_eigen_vals_and_vecs")]
        internal static extern int ImgProcCornerEigenValsAndVecs(
            IntPtr src,
            IntPtr dst,
            int blockSize,
            int ksize,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_pre_corner_detect")]
        internal static extern int ImgProcPreCornerDetect(
            IntPtr src,
            IntPtr dst,
            int ksize,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_gaussian_blur")]
        internal static extern int ImgProcGaussianBlur(
            IntPtr src,
            IntPtr dst,
            int width,
            int height,
            double sigmaX,
            double sigmaY,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_blur")]
        internal static extern int ImgProcBlur(
            IntPtr src,
            IntPtr dst,
            int width,
            int height,
            int anchorX,
            int anchorY,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_box_filter")]
        internal static extern int ImgProcBoxFilter(
            IntPtr src,
            IntPtr dst,
            int ddepth,
            int width,
            int height,
            int anchorX,
            int anchorY,
            int normalize,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_sqr_box_filter")]
        internal static extern int ImgProcSqrBoxFilter(
            IntPtr src,
            IntPtr dst,
            int ddepth,
            int width,
            int height,
            int anchorX,
            int anchorY,
            int normalize,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_median_blur")]
        internal static extern int ImgProcMedianBlur(
            IntPtr src,
            IntPtr dst,
            int ksize);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_bilateral_filter")]
        internal static extern int ImgProcBilateralFilter(
            IntPtr src,
            IntPtr dst,
            int d,
            double sigmaColor,
            double sigmaSpace,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_filter2d")]
        internal static extern int ImgProcFilter2D(
            IntPtr src,
            IntPtr dst,
            int ddepth,
            IntPtr kernel,
            int anchorX,
            int anchorY,
            double delta,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_sep_filter2d")]
        internal static extern int ImgProcSepFilter2D(
            IntPtr src,
            IntPtr dst,
            int ddepth,
            IntPtr kernelX,
            IntPtr kernelY,
            int anchorX,
            int anchorY,
            double delta,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_sobel")]
        internal static extern int ImgProcSobel(
            IntPtr src,
            IntPtr dst,
            int ddepth,
            int dx,
            int dy,
            int ksize,
            double scale,
            double delta,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_scharr")]
        internal static extern int ImgProcScharr(
            IntPtr src,
            IntPtr dst,
            int ddepth,
            int dx,
            int dy,
            double scale,
            double delta,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_laplacian")]
        internal static extern int ImgProcLaplacian(
            IntPtr src,
            IntPtr dst,
            int ddepth,
            int ksize,
            double scale,
            double delta,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_canny")]
        internal static extern int ImgProcCanny(
            IntPtr image,
            IntPtr edges,
            double threshold1,
            double threshold2,
            int apertureSize,
            int l2Gradient);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_canny_derivatives")]
        internal static extern int ImgProcCannyDerivatives(
            IntPtr dx,
            IntPtr dy,
            IntPtr edges,
            double threshold1,
            double threshold2,
            int l2Gradient);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_gaussian_kernel")]
        internal static extern int ImgProcGetGaussianKernel(
            int ksize,
            double sigma,
            int ktype,
            out IntPtr kernel);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_deriv_kernels")]
        internal static extern int ImgProcGetDerivKernels(
            IntPtr kx,
            IntPtr ky,
            int dx,
            int dy,
            int ksize,
            int normalize,
            int ktype);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_gabor_kernel")]
        internal static extern int ImgProcGetGaborKernel(
            int width,
            int height,
            double sigma,
            double theta,
            double lambd,
            double gamma,
            double psi,
            int ktype,
            out IntPtr kernel);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_pyr_down")]
        internal static extern int ImgProcPyrDown(
            IntPtr src,
            IntPtr dst,
            int width,
            int height,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_pyr_up")]
        internal static extern int ImgProcPyrUp(
            IntPtr src,
            IntPtr dst,
            int width,
            int height,
            int borderType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_warp_affine")]
        internal static extern int ImgProcWarpAffine(
            IntPtr src,
            IntPtr dst,
            IntPtr transform,
            int width,
            int height,
            int flags,
            int borderMode,
            double borderValueV0,
            double borderValueV1,
            double borderValueV2,
            double borderValueV3);
